fixed a bug regarding overflow for 100vw

--- a/slack-clone/src/components/landing/Landing.scss
+++ b/slack-clone/src/components/landing/Landing.scss
@@ -5,14 +5,19 @@
     height: calc(100vh - 70px); //The navbar is around 70px
     width: 100vw;
     display: grid;
-    grid-template-columns: max-content 1fr;
-    grid-gap: 50px;
+    grid-template-columns: 1fr 1fr;
+    max-width:100%;
+    
 
+    .img{
+        width: 100%;
+    }
 
 
     .body{
         padding-left: 50px;
         padding-right: 50px;
+        box-sizing: border-box;
 
         h1{
             font-family: "Times New Roman", Georgia, serif;
@@ -24,20 +29,25 @@
             font-family: "Times New Roman", Georgia, serif;
             margin-bottom: 30px;
             font-size: 1.3em;
-            color:rgb(50, 54, 72);
+            color:rgb(91, 94, 109);
         }
         .register{
             display: inline-flex;
             width: 140px;
             height: 20px;
             padding: 15px 20px 15px 20px;
-            background-color: rgb(28, 41, 157);
+            background-color: rgb(57, 69, 176);
             border-radius: 4px;
             color: white;
             justify-content: center;
+            transition: background-color 250ms;
 
             span{
                 align-self: center;
+            }
+
+            &:hover{
+                background-color: rgb(28, 41, 157);
             }
 
             &:link{
@@ -48,7 +58,7 @@
 
         h6{
             margin-top: 20px;
-            color:rgb(50, 54, 72);
+            color:rgb(91, 94, 109);
         }
     }
 
