--- a/slack-clone/src/components/navbar/NavBar.scss
+++ b/slack-clone/src/components/navbar/NavBar.scss
@@ -3,10 +3,12 @@
 .navbar{
     width: 100vw;
     height: 70px;
+    max-width:100%;
     background-color: #fff;
     border-bottom: solid;
     border-bottom-width: 1px;
     border-color: rgb(235, 235, 235);
+    box-sizing: content-box;
 
     text-align: center;
 
@@ -22,6 +24,7 @@
         height: 60px;  
         align-self: center;
         flex: 1;
+        display: inline-flex;
     }
 
     .navbar_list{
@@ -42,16 +45,26 @@
         
         }
         
-        .navbar_button{
-            font-size: 1em;
+        .workspace{
             width:146px;
             height:36px;
             border-radius: 4px;
-            border-color: black;
+            border-style:solid;
+            border-color: rgb(50, 54, 72);
             background-color: #fff;
             border-width: 1px;
             color:rgb(50, 54, 72);
-            box-shadow: none;
+            padding-top: 6px;
+            box-sizing: border-box;
+
+            &:hover{
+                color: rgb(63, 70, 173);
+                border-color: rgb(63,70,173);
+            }
+
+            &:link{
+                text-decoration: none;
+            }
 
         }
     }
